html and css updated

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
     <meta name="author" content="Emmanuel Kwasi Frempong">
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
@@ -27,8 +27,8 @@
     <main>
         <section class="company-info">
             <h1>White Water Rafting Company</h1>
-            <p>123 Main River Street<br>Kolob, California</p>
-            <p>+1 999 999 9999<br>info@whitewater.com</p>
+            <p>123 Main River Street<br />Kolob, California</p>
+            <p>+1 999 999 9999<br />info@whitewater.com</p>
         </section>
 
         <!-- ========= Map and Form Section ========= -->
@@ -37,7 +37,7 @@
             <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.093949545228!2d-122.41941508468125!3d37.774929779759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808a3c4b3f1f%3A0xa0c9bfb49c3b6a69!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1672560773204!5m2!1sen!2sus"
-                    allowfullscreen loading="lazy"></iframe>
+                    allowfullscreen="" loading="lazy"></iframe>
             </div>
 
             <!-- Form -->
@@ -74,7 +74,7 @@
                 <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
 
                 <div class="checkbox-row">
-                    <input type="checkbox" id="subscribe" name="subscribe">
+                    <input type="checkbox" id="subscribe" name="subscribe" />
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                 </div>
 
@@ -106,9 +106,9 @@
     <footer>
         <p>&copy; 2025 White Water Rafting Company | Designed by Kwasi Brew</p>
         <div class="social">
-            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
-            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
-            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook" /></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn" /></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram" /></a>
         </div>
     </footer>
 </body>
