--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Welcome to Whitewater Rafting – your ultimate destination for thrilling river adventures!">
     <meta name="author" content="Emmanuel Kwasi Frempong">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="images/raftingindex.css">
 </head>
 
 
