--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About Whitewater Family Rafting</title>
+    <title>Contact Us | White Water Rafting Company</title>
     <meta name="description"
-        content="Welcome to Whitewater Rafting – your ultimate destination for thrilling river adventures!">
+        content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
     <meta name="author" content="Emmanuel Kwasi Frempong">
     <link rel="stylesheet" href="images/raftingindex.css">
 </head>
