logo updated on html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,7 +16,7 @@
     <header class="site-header">
         <div class="logo">
             <a href="index.html">
-                <img src="images/logo.jpg" alt="Whitewater Family Rafting logo">
+                <img src="images/logo.png" alt="Whitewater Family Rafting logo">
             </a>
         </div>
 
