css and html updated

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,10 +31,10 @@
 
     <main>
         <!-- HERO -->
-        <section class="hero">
+        <div class="hero">
             <img src="images/heroimage.jpg" alt="Rafting Adventure">
             <h1>Whitewater Family Rafting</h1>
-        </section>
+        </div>
 
         <!-- ARTICLE / MISSION -->
         <article class="intro">
