--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
     <meta name="author" content="Emmanuel Kwasi Frempong">
-    <link rel="stylesheet" href="images/raftingindex.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 
@@ -20,12 +20,16 @@
             </a>
         </div>
 
-        <nav class="site-nav" aria-label="Primary navigation">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
-        </nav>
+        <header>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html" class="active">Contact Us</a>
+            </nav>
+        </header>
+
+
     </header>
 
 
@@ -33,7 +37,7 @@
         <!-- HERO -->
         <div class="hero">
             <img src="images/heroimage.jpg" alt="Rafting Adventure">
-            <h1>Whitewater Family Rafting</h1>
+            <h1>White Water Rafting</h1>
         </div>
 
         <!-- ARTICLE / MISSION -->
