--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -8,21 +8,19 @@
     <meta name="description"
         content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
     <meta name="author" content="Emmanuel Kwasi Frempong">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/raftingcont.css">
 </head>
 
 <body>
     <!-- ================== HEADER ================== -->
     <header>
         <img src="images/logo.png" alt="White Water Rafting Logo">
-        <header>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html" class="active">Contact Us</a>
-            </nav>
-        </header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html" class="active">Contact Us</a>
+        </nav>
     </header>
 
     <!-- ================== MAIN ================== -->
