--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -108,9 +108,9 @@
     <footer>
         <p>&copy; 2025 White Water Rafting Company | Designed by Kwasi Brew</p>
         <div class="social">
-            <a href="#"><img src="images/facebook.jpg" alt="Facebook" /></a>
-            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn" /></a>
-            <a href="#"><img src="images/instagram.jpg" alt="Instagram" /></a>
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
         </div>
     </footer>
 </body>
