--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,8 +27,8 @@
     <main>
         <section class="company-info">
             <h1>White Water Rafting Company</h1>
-            <p>123 Main River Street<br />Kolob, California</p>
-            <p>+1 999 999 9999<br />info@whitewater.com</p>
+            <p>123 Main River Street<br>Kolob, California</p>
+            <p>+1 999 999 9999<br>info@whitewater.com</p>
         </section>
 
         <!-- ========= Map and Form Section ========= -->
@@ -74,7 +74,7 @@
                 <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
 
                 <div class="checkbox-row">
-                    <input type="checkbox" id="subscribe" name="subscribe" />
+                    <input type="checkbox" id="subscribe" name="subscribe">
                     <label for="subscribe">Please subscribe me to the monthly newsletter</label>
                 </div>
 
