--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -60,11 +60,11 @@
 
 
         <!-- CTA strip to contact page (redundant clear CTA) -->
-        <section class="cta-strip" aria-labelledby="cta-strip-heading">
-            <h2 id="cta-strip-heading" class="sr-only">Call to Action</h2>
-            <p>Ready to go? <a class="cta-inline" href="contact.html">Contact us</a> for reservations and group pricing
-            </p>
-        </section>
+    <section class="cta-strip" aria-labelledby="cta-strip-heading">
+        <h2 id="cta-strip-heading" class="sr-only">Call to Action</h2>
+        <p>Ready to go? <a class="cta-inline" href="contact.html">Contact us</a> for reservations and group pricing</p>
+    </section>
+
 
 
         <!-- TRIP DETAILS: grid of trip cards (>= 3) -->
