--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,14 +20,14 @@
             </a>
         </div>
 
-    
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="trips.html">Trips</a>
-                <a href="contact.html" class="active">Contact Us</a>
-            </nav>
-    
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html" class="active">Contact Us</a>
+        </nav>
+
 
 
     </header>
@@ -41,7 +41,9 @@
         </div>
 
         <!-- ARTICLE / MISSION -->
+        <!-- ARTICLE / MISSION -->
         <article class="intro">
+            <h2 class="sr-only">Our Mission</h2>
             <div class="intro-text">
                 <p>
                     To create unforgettable river adventures that bring families, friends, and nature together in joy,
