--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -34,11 +34,13 @@
         <!-- ========= Map and Form Section ========= -->
         <section class="contact-section">
             <!-- Map -->
+            <h2 class="sr-only">Contact Information</h2>
             <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.093949545228!2d-122.41941508468125!3d37.774929779759!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085808a3c4b3f1f%3A0xa0c9bfb49c3b6a69!2sSan%20Francisco!5e0!3m2!1sen!2sus!4v1672560773204!5m2!1sen!2sus"
                     allowfullscreen="" loading="lazy"></iframe>
             </div>
+        </section>
 
             <!-- Form -->
             <form class="contact-form" action="#" method="post">
