css and homepage updated.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contact Us | White Water Rafting Company</title>
+    <title> About Us | White Water Rafting Company</title>
     <meta name="description"
-        content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
+        content="Discover thrilling white water rafting adventures with White Water Rafting Company. Explore our guided river trips, safety tips, and breathtaking experiences for all skill levels. Plan your next outdoor adventure today!">
     <meta name="author" content="Emmanuel Kwasi Frempong">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
