--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us | White Water Rafting Company</title>
+    <title> Contact Us | White Water Rafting Company</title>
     <meta name="description"
         content="Contact White Water Rafting Company to plan your next river adventure. Find our address, phone, email, and connect with our team.">
     <meta name="author" content="Emmanuel Kwasi Frempong">
@@ -106,7 +106,7 @@
 
     <!-- ================== FOOTER ================== -->
     <footer>
-        <p>&copy; 2025 White Water Rafting Company | Designed by Kwasi Brew</p>
+        <p>&copy; 2025 White Water Rafting Company | Designed by Emmanuel Kwasi Frempong</p>
         <div class="social">
             <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
             <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
