--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Trips | White Water Rafting Company</title>
+    <title> Trips | White Water Rafting Company</title>
     <meta name="description"
-        content="Whitewater rafting is a type of recreation that involves navigating a non-motorized watercraft down free flowing rivers. A rafting company organizes trips, provides the watercraft, life jackets, etc., and typically offers experienced guides to take passengers down a river. The business intent is to provide a thrilling and safe experience to individuals and groups for a fee.">
+        content="Discover thrilling river adventures with our rafting trips. Choose from family floats, half-day, or full-day adventures with professional equipment and guides.">
     <meta name="author" content="Emmanuel Kwasi Frempong">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-    <!-- HEADER (same structure as other pages) -->
+    <!-- HEADER -->
     <header>
         <img src="images/logo.png" alt="White Water Rafting Logo">
         <nav>
@@ -24,105 +24,95 @@
     </header>
 
     <main>
-        <!-- HERO: full-width image and heading -->
-        <section class="hero-trips" aria-label="Trips hero">
+        <!-- HERO SECTION -->
+        <section class="hero-trips">
             <div class="hero-inner">
-                <h1>Pick Your River Adventure</h1>
-                <p class="hero-sub">Safe, family-friendly and adrenaline-packed trips for everyone</p>
-                <a class="cta-button" href="contact.html">Book or Ask a Question</a>
-            </div>
-        </section>
-
-        <!-- HOME: Company offerings block (grid layout) -->
-        <section class="home-offers" aria-labelledby="offers-heading">
-            <h2 id="offers-heading">Our Purpose & Offerings</h2>
-
-            <div class="offers-grid">
-                <div class="offer">
-                    <img src="images/home1.webp" alt="Family rafting experience">
-                    <h3>Family Adventures</h3>
-                    <p>Gentle stretches for family bonding and safe learning in the river.</p>
-                </div>
-
-                <div class="offer">
-                    <img src="images/home2.webp" alt="Guided whitewater">
-                    <h3>Guided Whitewater Trips</h3>
-                    <p>Experienced guides, safe equipment and unforgettable rapids.</p>
-                </div>
-
-                <div class="offer">
-                    <img src="images/home3.webp" alt="Group bookings and events">
-                    <h3>Group & Corporate Events</h3>
-                    <p>Custom packages for groups, team building and school trips.</p>
-                </div>
+                <h1>Choose Your Adventure</h1>
+                <p class="hero-sub">Safe, guided, and unforgettable rafting experiences for everyone</p>
+                <a class="cta-button" href="contact.html">Book Your Trip</a>
             </div>
         </section>
 
 
-        <!-- CTA strip to contact page (redundant clear CTA) -->
-    <section class="cta-strip" aria-labelledby="cta-strip-heading">
-        <h2 id="cta-strip-heading" class="sr-only">Call to Action</h2>
-        <p>Ready to go? <a class="cta-inline" href="contact.html">Contact us</a> for reservations and group pricing</p>
-    </section>
+        <!-- INTRO / OFFERINGS -->
+        <section class="intro">
+            <h2>Find Your Perfect River Experience</h2>
+            <p>Our company offers a wide range of trips tailored for families, thrill-seekers, and groups. Whether it’s
+                your first time or you’re an experienced rafter, we provide the right balance of excitement, safety, and
+                breathtaking scenery.</p>
+        </section>
 
-
-
-        <!-- TRIP DETAILS: grid of trip cards (>= 3) -->
-        <section class="trips-grid" aria-labelledby="trips-heading">
-            <h2 id="trips-heading">Featured Trips</h2>
+        <!-- TRIPS GRID -->
+        <section class="trips-grid">
+            <h2>Featured Rafting Adventures</h2>
 
             <article class="trip-card">
-                <img src="images/trip-family.webp" alt="Family rafting trip" width="600" height="400">
+                <img src="images/trip-family.webp" alt="Family rafting trip">
                 <div class="trip-body">
                     <h3>Family Floats</h3>
-                    <p>Gentle rapids and scenic river stretches. Perfect for families, children and beginners. Includes
-                        safety briefing and lifejackets.</p>
+                    <p>Gentle rapids and calm stretches suitable for children and first-timers. Our guides ensure
+                        everyone enjoys a safe, memorable float with nature’s beauty all around.</p>
                     <ul>
                         <li>Duration: 2–3 hours</li>
                         <li>Difficulty: Easy</li>
-                        <li>Price: $60/adult</li>
+                        <li>Equipment: Lifejackets, helmets, paddles</li>
+                        <li>Price: $60 per adult</li>
                     </ul>
                     <a class="card-cta" href="contact.html">Reserve Family Trip</a>
                 </div>
             </article>
 
             <article class="trip-card">
-                <img src="images/trip-halfday.webp" alt="Half day rafting trip" width="600" height="400">
+                <img src="images/trip-halfday.webp" alt="Half-day rafting trip">
                 <div class="trip-body">
                     <h3>Half-Day Adventure</h3>
-                    <p>More action and several class II–III rapids. Guided trip with snacks and photo package option.
-                    </p>
+                    <p>Experience fast-moving water and class II–III rapids. Perfect for those seeking moderate
+                        excitement. Includes equipment, snacks, and professional photos.</p>
                     <ul>
                         <li>Duration: 5 hours</li>
                         <li>Difficulty: Moderate</li>
-                        <li>Price: $95/adult</li>
+                        <li>Equipment: Helmet, paddle, wetsuit, lifejacket</li>
+                        <li>Price: $95 per adult</li>
                     </ul>
                     <a class="card-cta" href="contact.html">Book Half-Day</a>
                 </div>
             </article>
 
             <article class="trip-card">
-                <img src="images/trip-allday.webp" alt="Full day whitewater rafting" width="600" height="400">
+                <img src="images/trip-allday.webp" alt="Full-day rafting trip">
                 <div class="trip-body">
                     <h3>Full-Day Whitewater</h3>
-                    <p>Full adrenaline experience with professional guides, lunch and riverside rest stops. For
-                        experienced and confident beginners too.</p>
+                    <p>Take on powerful rapids, long river stretches, and incredible scenery. This adrenaline-pumping
+                        trip includes lunch and full rafting gear for an unforgettable day.</p>
                     <ul>
                         <li>Duration: 8–9 hours</li>
                         <li>Difficulty: Intermediate–Advanced</li>
-                        <li>Price: $150/adult</li>
+                        <li>Equipment: Full gear, wetsuit, helmet, paddle, first-aid support</li>
+                        <li>Price: $150 per adult</li>
                     </ul>
                     <a class="card-cta" href="contact.html">Reserve Full-Day</a>
                 </div>
             </article>
         </section>
 
-        <!-- TRIPS SUMMARY TABLE -->
-        <section class="trips-table" aria-labelledby="summary-table-heading">
-            <h2 id="summary-table-heading">All Trips at a Glance</h2>
+        <!-- EQUIPMENT SECTION -->
+        <section class="equipment">
+            <h2>Included Equipment</h2>
+            <p>All our trips include professional-grade equipment to ensure safety and comfort on the river:</p>
+            <ul>
+                <li><strong>Life Jackets:</strong> U.S. Coast Guard approved buoyancy vests.</li>
+                <li><strong>Helmets:</strong> Lightweight yet strong for impact protection.</li>
+                <li><strong>Paddles:</strong> Durable, adjustable paddles for different water levels.</li>
+                <li><strong>Rafts:</strong> Non-slip, reinforced inflatable rafts for up to 8 people.</li>
+                <li><strong>Wetsuits & Booties:</strong> For cold-water comfort and insulation.</li>
+            </ul>
+        </section>
+
+        <!-- TRIPS TABLE -->
+        <section class="trips-table">
+            <h2>Trip Overview</h2>
             <div class="table-wrap">
                 <table>
-                    <caption class="sr-only">Summary of all available trips</caption>
                     <thead>
                         <tr>
                             <th>Trip</th>
@@ -150,19 +140,24 @@
                         <tr>
                             <td>Full-Day Whitewater</td>
                             <td>8–9 hrs</td>
-                            <td>Intermediate</td>
+                            <td>Intermediate–Advanced</td>
                             <td>$150</td>
                             <td><a class="small-cta" href="contact.html">Reserve</a></td>
                         </tr>
-                        <!-- add more rows if needed -->
                     </tbody>
                 </table>
             </div>
         </section>
 
-        <!-- NEWSLETTER SIGNUP -->
-        <section class="newsletter" aria-labelledby="newsletter-heading">
-            <h2 id="newsletter-heading">Get Trip Updates</h2>
+        <!-- CTA -->
+        <section class="cta-strip">
+            <p>Ready to paddle? <a class="cta-inline" href="contact.html">Contact us</a> to plan your next river trip.
+            </p>
+        </section>
+
+        <!-- NEWSLETTER -->
+        <section class="newsletter">
+            <h2>Join Our Adventure Community</h2>
             <form id="newsletter-form" action="#" method="post" novalidate>
                 <div class="newsletter-row">
                     <label for="newsletter-name">Name</label>
@@ -175,12 +170,11 @@
                 <button class="cta-button" type="submit">Sign Me Up</button>
             </form>
         </section>
-
     </main>
 
-    <!-- FOOTER (same as other pages) -->
+    <!-- FOOTER -->
     <footer>
-        <p>&copy; 2025 White Water Rafting Company | Designed by Kwasi Brew</p>
+        <p>&copy; 2025 White Water Rafting Company | Designed by Emmanuel Kwasi Frempong</p>
         <div class="social">
             <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
             <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
