footer for homepage and about us page updated.

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -83,19 +83,13 @@
         </section>
     </main>
 
-    <footer class="site-footer">
-        <p>© 2025 Whitewater Family Rafting | Emmanuel Kwasi Frempong</p>
-        <nav class="socialmedia" aria-label="Social links">
-            <a href="https://facebook.com" aria-label="Facebook">
-                <img src="images/facebook.jpg" alt="Facebook Icon">
-            </a>
-            <a href="https://linkedin.com" aria-label="LinkedIn">
-                <img src="images/linkedin.jpg" alt="LinkedIn Icon">
-            </a>
-            <a href="https://instagram.com" aria-label="Instagram">
-                <img src="images/instagram.jpg" alt="Instagram Icon">
-            </a>
-        </nav>
+    <footer>
+        <p>&copy; 2025 White Water Rafting Company | Designed by Emmanuel Kwasi Frempong</p>
+        <div class="social">
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn"></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+        </div>
     </footer>
 </body>
 
