html and css updated

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -62,6 +62,7 @@
 
         <!-- CALL TO ACTION STRIP -->
         <section class="cta-strip">
+            <h2 class="visually-hidden">Call to Action</h2>
             <p>Ready for an unforgettable experience? <a href="trips.html">Book Your Trip Now!</a></p>
         </section>
 
