line 64 updated in html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -61,10 +61,10 @@
         </section>
 
         <!-- CALL TO ACTION STRIP -->
-        <section class="cta-strip">
+        <div class="cta-strip">
             <h2 class="visually-hidden">Call to Action</h2>
             <p>Ready for an unforgettable experience? <a href="trips.html">Book Your Trip Now!</a></p>
-        </section>
+        </div>
 
         <!-- NEWSLETTER SIGNUP -->
         <section class="newsletter">
