line 153 to 156 in html updated.

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -150,10 +150,10 @@
         </section>
 
         <!-- CTA -->
-        <section class="cta-strip">
+        <div class="cta-strip">
             <p>Ready to paddle? <a class="cta-inline" href="contact.html">Contact us</a> to plan your next river trip.
             </p>
-        </section>
+        </div>
 
         <!-- NEWSLETTER -->
         <section class="newsletter">
