--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -59,11 +59,11 @@
                             General Inquiry
                         </label>
                         <label>
-                            <input type="radio" name="purpose" value="Reservation Question">
+                            <input type="radio" id="purpose1" name="purpose" value="Reservation Question">
                             Reservation Question
                         </label>
                         <label>
-                            <input type="radio" name="purpose" value="Website Suggestion">
+                            <input type="radio" id="purpose1" name="purpose" value="Website Suggestion">
                             Website Suggestion
                         </label>
                     </div>
