line 55 purpose1 updated to purpose

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -52,18 +52,18 @@
                 </div>
         
                 <div class="form-row form-row--full">
-                    <label for="purpose1">Message Purpose:</label>
+                    <label for="purpose">Message Purpose:</label>
                     <div class="radio-group">
                         <label>
-                            <input type="radio" id="purpose1" name="purpose" value="General Inquiry" required>
+                            <input type="radio" name="purpose" value="General Inquiry" required>
                             General Inquiry
                         </label>
                         <label>
-                            <input type="radio" id="purpose1" name="purpose" value="Reservation Question">
+                            <input type="radio" name="purpose" value="Reservation Question">
                             Reservation Question
                         </label>
                         <label>
-                            <input type="radio" id="purpose1" name="purpose" value="Website Suggestion">
+                            <input type="radio" name="purpose" value="Website Suggestion">
                             Website Suggestion
                         </label>
                     </div>
