--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -55,7 +55,7 @@
                     <label for="purpose">Message Purpose:</label>
                     <div class="radio-group">
                         <label>
-                            <input type="radio" name="purpose" value="General Inquiry" required>
+                            <input type="radio"  id="purpose" name="purpose" value="General Inquiry" required>
                             General Inquiry
                         </label>
                         <label>
